Fix text wrapping in the about box, change a few details about what is shown.

--- a/gui-util/src/main/resources/isaac-shared-styles.css
+++ b/gui-util/src/main/resources/isaac-shared-styles.css
@@ -69,3 +69,10 @@ makes it look like a table view.
 	-fx-background-color: -fx-focus-color, -fx-cell-focus-inner-border, -fx-focus-color;
 	-fx-background-insets: 0, 1, 2;
 }
+
+/*
+For some reason, JavaFX indents this
+*/
+.hyperlink {
+	-fx-padding: 0em;
+}
